src/styles/sidebar/sidebar-link.css
@import "../colors.css";
@import "../spacing.css";
@import "./properties.css";

.link {
  border: var(--sidebar-link-border);
  color: var(--sidebar-link-color);
  cursor: pointer;
  font-size: var(--sidebar-link-font-size);
  list-style: none;
  padding: var(--sidebar-link-padding);
}

.link > button {
  appearance: none;
  background: none;
  border: none;
  cursor: pointer;
  outline: none;
  text-align: left;
  cursor: pointer;
  margin: 0;
  padding: var(--sidebar-link-button-padding);
  width: 100%;
}

.link svg {
  margin-right: var(--sidebar-link-icon-margin-right);
}

.link div {
  outline: none;
}

.link:hover {
  background-color: var(--sidebar-link-hover-background-color);
  border-bottom-color: var(--sidebar-link-hover-border-bottom-color);
  border-top-color: var(--sidebar-link-hover-border-top-color);
  color: var(--sidebar-link-hover-color);
}

.active {
  background-color: var(--sidebar-link-selected-background-color);
  border-bottom-color: var(--sidebar-link-selected-border-bottom-color);
  border-top-color: var(--sidebar-link-selected-border-top-color);
  color: var(--sidebar-link-selected-color);
}

.active .title:only-of-type {
  color: var(--sidebar-link-selected-color);
}

.text {
  color: var(--sidebar-link-color);
  display: block;
  margin: var(--sidebar-link-margin);
  outline: none;
}

.title {
  color: var(--sidebar-title-color);
  font-size: var(--sidebar-title-font-size);
  line-height: var(--sidebar-title-line-height);
  margin: var(--sidebar-title-margin);
  text-transform: var(--sidebar-title-text-transform);
}

.subtitle {
  color: var(--sidebar-subtitle-color);
  font-size: var(--sidebar-subtitle-font-size);
  text-transform: var(--sidebar-subtitle-text-transform);
  margin-bottom: var(--sidebar-subtitle-margin-bottom);
  margin-top: var(--sidebar-subtitle-margin-top);
  user-select: none;
}

.subtitle svg {
  margin-left: var(--spacing-tiny);
  margin-right: 0;
}

.collapsed .title {
  text-align: center;
}

.collapsed .icon svg {
  margin: 0;
}

@media (--media-desk) {

  .link {
    font-size: var(--sidebar-link-font-size-desk);
  }

  .subtitle {
    font-size: var(--sidebar-title-font-size-desk);
  }

  .title {
    font-size: var(--sidebar-title-font-size-desk);
  }
}

@media (--media-tv) {

  .link {
    font-size: var(--sidebar-link-font-size-tv);
  }

  .title {
    font-size: var(--sidebar-title-font-size-tv);
  }

  .subtitle {
    font-size: var(--sidebar-title-font-size-tv);
  }
}

